CloudFormation_Day_6/Outputs/Componentization/security-groups/security-groups.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: this template provisions the webserver and database security group

Parameters: 
  DevWebserverSGGroupName:
    Description: please provide a group name for your DevWebserver Security group
    Type: String
    Default: DevWebserverSG

  DevWebserverSGGroupDescription:
    Description: please provide a description for your DevWebserver Security group
    Type: String
    Default: Enabling ssh and http

  DevDBserverSGGroupName:
    Description: please provide a group name for your DevDBserver Security group
    Type: String
    Default: DevDBserverSG

  DevDBserverSGGroupDescription:
    Description: please provide a description for your DevDBserver Security group
    Type: String
    Default: Enabling MySQL

Resources: 
#webserver security group
  DevWebserverSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref DevWebserverSGGroupName
      GroupDescription: !Ref DevWebserverSGGroupDescription
      VpcId: !ImportValue DevVPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: DevWebserverSG

#Database security group
  DevDBserverSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref DevDBserverSGGroupName
      GroupDescription: !Ref DevDBserverSGGroupDescription
      VpcId: !ImportValue DevVPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: DevDBserverSG

Outputs:
  DevWebserverSGIDExportOutput:
    Description: exporting Dev webserver SG ID
    Value: !Ref DevWebserverSG
    Export: 
      Name: DevWebserverSGID
